<resources>
    <string name="app_name">Wamans</string>
    <string name="glowly">Glowly</string>
    <string name="tonico">Tónico</string>
    <string name="serum">Serum</string>
    <string name="limpiador">Limpiador</string>
    <string name="hidratante">Hidratante</string>
    <string name="bloqueador">Bloqueador</string>
    <string name="desmaquillante">Desmaquillante</string>
    <string name="productos">Productos</string>
    <string name="progreso">Progreso...</string>
    <string name="rutina_completa">Marcar rutina completa</string>
    <string name="rutina_dia">Rutina de dia</string>
    <string name="rutina_noche">Rutina de noche</string>
    <string name="perfil">Perfil</string>
    <string name="dia">Dia</string>
    <string name="noche">Noche</string>
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="uso">Uso</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="fecha_apertura">Fecha de apertura</string>
    <string name="fecha_caducidad">Fecha de caducidad</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="siguiente">Siguiente</string>
    <string name="sugerencias_productos">Sugerencias de productos segun tu tipo de piel:</string>
    <string name="agrega_rutina">Agrega tu rutina</string>
    <string name="escoge">Escoge</string>
    <string name="cual_es_tu_nombre">¿Cuál es tu nombre?</string>
    <string name="ingresa_nombre">Ingresa tu nombre</string>
    <string name="cual_es_tu_tipo_de_piel">¿Cuál es tu tipo de piel?</string>
    <string name="tipo_grasa">Grasa: produce más aceite de lo normal, lo que genera brillo excesivo y
        tendencia a imperfecciones como puntos negros o acné.</string>
    <string name="tipo_mixta">Mixta: Combina zonas secas y zonas grasas</string>
    <string name="tipo_seca">Seca: tiende a sentirse tirante, áspera o escamosa. Tiene menor producción de aceite,
        lo que puede provocar falta de elasticidad y una apariencia apagada.</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="dd_mm_aa">DD/MM/AA</string>
    <string name="alertar_cuando_est_por_vencer">Alertar cuando esté por vencer</string>
    <string name="atras">Atrás</string>
</resources>