<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NuevoProducto">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_producto"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/childa"
            android:textColor="@color/casiguindo"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"/>


        <ImageView
            android:id="@+id/img_producto"
            android:layout_width="221dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:contentDescription="@string/productos"
            android:padding="10dp"
            android:src="@mipmap/producto" />


        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/casiguindo"
            android:fontFamily="@font/papernotes"/>

        <EditText
            android:id="@+id/et_nombre"
            android:hint="@string/ingresa_nombre"
            android:fontFamily="@font/papernotes"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gris"/>


        <TextView
            android:text="@string/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/casiguindo"
            android:fontFamily="@font/papernotes"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/sp_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/tb_am"
                    android:textOn="@string/am"
                    android:textOff="@string/am"
                    android:checked="true"
                    android:fontFamily="@font/papernotes"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:background="@drawable/toggle_selector"
                    android:layout_height="35dp"
                    android:layout_width="69dp"/>
                <ToggleButton
                    android:id="@+id/tb_pm"
                    android:textOn="@string/pm"
                    android:textOff="@string/pm"
                    android:fontFamily="@font/papernotes"
                    android:textColor="@color/casiguindo"
                    android:textSize="20sp"
                    android:background="@drawable/toggle_selector"
                    android:layout_height="35dp"
                    android:layout_width="69dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_frecuencia"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/frecuencia"
                android:fontFamily="@font/papernotes"
                android:textSize="20sp"
                android:background="@drawable/edit_text_rounded"
                android:padding="10dp"/>
        </LinearLayout>


        <TextView
            android:text="@string/fecha_apertura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/casiguindo"
            android:textSize="20sp"
            android:fontFamily="@font/papernotes"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_apertura"
            android:hint="@string/dd_mm_aa"
            android:inputType="date"
            android:fontFamily="@font/papernotes"
            android:textSize="20sp"
            android:background="@drawable/edit_text_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/fecha_caducidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/casiguindo"
            android:fontFamily="@font/papernotes"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_caducidad"
            android:hint="@string/dd_mm_aa"
            android:inputType="date"
            android:fontFamily="@font/papernotes"
            android:textSize="20sp"
            android:background="@drawable/edit_text_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/alertar_cuando_est_por_vencer"
                android:textColor="@color/casiguindo"
                android:fontFamily="@font/papernotes"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Switch
                android:id="@+id/sw_alerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/casiguindo"
                android:trackTint="@color/rosaFuerte"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_cancelar"
                android:text="@string/cancelar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:fontFamily="@font/papernotes"
                android:layout_height="wrap_content"
                android:textColor="@color/casiguindotrans"
                android:backgroundTint="@color/rosaLeve" />

            <Button
                android:id="@+id/btn_guardar"
                android:text="@string/guardar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:fontFamily="@font/papernotes"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/casiguindo"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
