<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nombre"
    android:background="@color/rosaLeve"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <EditText
        android:id="@+id/ingresa_nombre_pantallaNombre"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/ingresa_nombre"
        android:background="@color/rosaLeve"
        android:textColor="@color/casiguindo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cual_es_tu_nombre_pantallaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/cual_es_tu_nombre"
        android:fontFamily="@font/childa"
        android:textColor="@color/casiguindo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ingresa_nombre_pantallaNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"/>
    
    <Button
        android:id="@+id/boton_siguiente_pantallaNombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/casiguindo"
        android:fontFamily="@font/papernotes"
        android:text="@string/siguiente"
        app:layout_constraintTop_toBottomOf="@+id/ingresa_nombre_pantallaNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>